restore jdk 17 compatibility